<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edtItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_gear_item"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_category"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quantity"
            android:importantForAutofill="no"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_notes"
            android:importantForAutofill="no"
            android:inputType="textLongMessage" />

        <Button
            android:id="@+id/btnAddGear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_gear" />

        <Button
            android:id="@+id/btnViewGear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_view_gear" />

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_items_packed"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>